ecmascript/parser/tests/test262-error-references/fail/7fc173197c3cc75d.js.stderr
error: Unexpected token
 --> $DIR/tests/test262-parser/fail/7fc173197c3cc75d.js:1:16
  |
1 | (class extends !a {})
  |                ^

